nextGenCoreApp/main/objects/Custom_Task__c/Custom_Task__c.object-meta.xml
<CustomObject>
    <label>Custom Task</label>
    <nameField>
        <displayFormat>CS-{0}</displayFormat>
        <label>CS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>