nextGenCoreApp/main/objects/Custom_Task__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Custom Tasks</relationshipLabel>
    <relationshipName>Custom_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>