nextGenCoreApp/main/objects/Custom_Task__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <defaultValue>&#39;1&#39;</defaultValue>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>