nextGenCoreApp/main/objects/Custom_Task__c/fields/Short_Comment__c.field-meta.xml
<CustomField>
    <fullName>Short_Comment__c</fullName>
    <label>Short Comment</label>
    <type>TextArea</type>
</CustomField>