nextGenCoreApp/main/objects/Custom_Task__c/recordTypes/Critical.recordType-meta.xml
<RecordType>
    <fullName>Critical</fullName>
    <active>true</active>
    <label>Critical</label>
</RecordType>