nextGenCoreApp/main/objects/Custom_Task__c/recordTypes/Low_Priority.recordType-meta.xml
<RecordType>
    <fullName>Low_Priority</fullName>
    <active>true</active>
    <label>Low Priority</label>
</RecordType>