nextGenCoreApp/main/objects/Custom_Task__c/recordTypes/Urgent.recordType-meta.xml
<RecordType>
    <fullName>Urgent</fullName>
    <active>true</active>
    <label>Urgent</label>
</RecordType>