nextGenCoreApp/main/objects/Custom_Task__c/validationRules/Cinema_External_Id_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Cinema_External_Id_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(External_Id__c)</errorConditionFormula>
    <errorDisplayField>External_Id__c</errorDisplayField>
    <errorMessage>This field cannot be empty!</errorMessage>
</ValidationRule>