nextGenCoreApp/main/objects/Custom_Task__c/listViews/CS.listView-meta.xml
<ListView>
    <fullName>CS</fullName>
    <columns>NAME</columns>
    <columns>External_Id__c</columns>
    <columns>Short_Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>CS</label>
</ListView>